--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^7.0.4",
-		"vite-plugin-wasm": "^3.5.0"
+		"vite": "^7.0.4"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
