--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^1.13.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
