--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,11 +37,10 @@ jobs:
         run: bun run build
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
-          path: 'build/'
-
+          path: build/
   deploy:
     needs: build
     runs-on: ubuntu-latest
